Fix: TTF-1323, TTF-1300 - spacing and also the max width of card deck images
https://digitaltools.phe.org.uk/browse/TTF-1300
https://digitaltools.phe.org.uk/browse/TTF-1323

--- a/app/shared/components/Accent/style.scss
+++ b/app/shared/components/Accent/style.scss
@@ -43,10 +43,12 @@
 .accent__text {
   display: block;
   font-size: 1.6rem;
+  margin-top: 1rem;
 
   @include media-breakpoint-up(sm) {
     overflow: hidden;
     font-size: 1.8rem;
+    margin-top: 0;
   }
 }
 
